--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="signup" href="">Sign Up</a>
         </div>
 
-        <div class="hero-right-side">Place image here</div>
+        <img src="images/melba-dog.png" class="hero-right-side">
     </section>
 
     <section class="info-cards">
