Added and styled sections on info cards and quotes

--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 
 <html lang="en">
 
-  <head>
+    <head>
 
-    <title>Chartley - TOP Landing Page</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
+        <title>Chartley - TOP Landing Page</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Lobster&family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Lobster&family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 
-  </head>
+    </head>
+
     <header>Header Logo
 
         <div class="header-links">
@@ -22,30 +23,64 @@
         </div>
 
     </header>
+
     <body>
 
-    <section class="hero">
-        <div class="hero-left-side">This website is awesome
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-            <a class="signup" href="">Sign Up</a>
-        </div>
+        <section class="hero">
 
-        <img src="images/melba-dog.png" class="hero-right-side">
-    </section>
+            <div class="hero-left-side">This puppy is awesome
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <a class="signup" href="">Sign Up</a>
+            </div>
 
-    <section class="info-cards">
-        <p>Cards</p> 
-    </section>
+            <img class="hero-right-side" src="images/melba-dog.png">
+        </section>
 
-    <section class="inspirational">
-        Inspirational quote
-    </section>
+        <section class="info-cards">
+            <h2>Some random information</h2>
+            <div class="card-container">
 
-    <section class="call-to-action">
-        Call to action!
-    </section>
+                <div class="card">
+                    <img src="images/melba-dog.png" alt="" class="card-picture">
+                    <p>
+                        This is just some generic content. As a paragraph, does it look ok? It might need some adjusting.
+                    </p>
+                </div>
 
-  </body>
+                <div class="card">
+                    <img src="images/melba-dog.png" alt="" class="card-picture">
+                    <p>
+                        This is just some generic content. As a paragraph, does it look ok? It might need some adjusting.
+                    </p>
+                </div>
+
+                <div class="card">
+                    <img src="images/melba-dog.png" alt="" class="card-picture">
+                    <p>
+                        This is just some generic content. As a paragraph, does it look ok? It might need some adjusting.
+                    </p>
+                </div>
+
+                <div class="card">
+                    <img src="images/melba-dog.png" alt="" class="card-picture">
+                    <p>
+                        This is just some generic content. As a paragraph, does it look ok? It might need some adjusting.
+                    </p>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="inspirational">
+            <p>The puppy above appears to be rational. But it would be irrational to believe that she is capable of being rational.</p>
+            <div class="author">- Melba</div>
+        </section>
+
+        <section class="call-to-action">
+            Call to action!
+        </section>
+
+    </body>
 
   <footer>Footer</footer>
 
