--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
         </section>
 
         <section class="call-to-action">
-            Call to action!
+            <div class="action-container">
+                <div>
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <a>Sign up now!</a>
+            </div>
         </section>
 
     </body>
