Changed styles on call-to-action, added footer section.

--- a/index.html
+++ b/index.html
@@ -82,12 +82,14 @@
                     <h2>Call to action! It's time!</h2>
                     <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
-                <a>Sign up now!</a>
+                <a>Sign up!</a>
             </div>
         </section>
 
     </body>
 
-  <footer>Footer</footer>
+    <footer>
+        <p>Copyright &copy; Chartley 2022</p>
+    </footer>
 
 </html>
